@@ -50,6 +50,7 @@ public:
   static int compare (Moment const &, Moment const &);
   SCM as_scheme () const;
 };
+
 IMPLEMENT_ARITHMETIC_OPERATOR (Moment, +);
 IMPLEMENT_ARITHMETIC_OPERATOR (Moment, -);
 IMPLEMENT_ARITHMETIC_OPERATOR (Moment, /);
